--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "react": "^15.3.1",
+    "react-coverflow": "^0.2.3",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1"
   },
