--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "webpack-dev-server": "1.15.1",
     "whatwg-fetch": "1.0.0"
   },
+  "engines": {
+    "node": "7.2.1"
+  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
@@ -89,15 +92,14 @@
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$"
   },
   "description": "## Setup - Start by cloning the simple react setup: https://github.com/nmadd/simple-react-setup - Install Bootstrap using `npm install bootstrap --save`, and import it into you `App.js` file using `import 'bootstrap/dist/css/bootstrap.css';` - npm install react-router - IMPORTANT: If you run into issues or have questions while making your project, post them here so we can all try to help out: https://github.com/C4Q/AC3.1/issues",
-  "main": "index.js",
+  "main": "App.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jung8027/movie-store.git"
+    "url": "git+https://github.com/jung8027/Reactive-Music-Store.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jung8027/movie-store/issues"
-  },
-  "homepage": "https://github.com/jung8027/movie-store#readme"
+    "url": "https://github.com/jung8027/Reactive-Music-Store/issues"
+  }
 }
