--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "express": "^4.15.2",
     "jquery": "^3.1.1",
     "react": "^15.3.1",
     "react-coverflow": "^0.2.3",
